--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,3 +19,11 @@ body {
   background-color: var(--gray-800);
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
