--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,26 @@
-// TODO
+.container {
+  .post {
+    width: 50%;
+    text-align: justify;
+    margin: auto;
+    h1 {
+      margin: 3rem 0 1rem 0;
+      font-size: 3rem;
+      font-weight: 700;
+      color: var(--gray-100);
+    }
+
+    h3 {
+      margin: 3rem 0 3rem;
+      font-size: 2.25rem;
+      font-weight: 700;
+      color: var(--gray-100);
+    }
+
+    p {
+      font-size: 1.125rem;
+      color: var(--gray-200);
+      margin-bottom: 1.5rem;
+    }
+  }
+}
